# boiler-temperature-monitor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.esp-wrover-kit
include/: config.h
src/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
